Added layout re-render interface

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,8 +8,11 @@
     <link rel='manifest' href='/manifest.json'>
     <link rel="stylesheet" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/site.css" />
+    <script src="/static/lib/jquery/dist/jquery.min.js"></script>
+    <script src="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/CoreNode/App/App.js" type="module"></script>
 </head>
-<body>
+  <body>
    <!--
             <div class="col-md-6">
             <div class="card mb-4 shadow-sm">
@@ -82,7 +85,5 @@
       <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
     </div>
   </footer>-->
-    <script src="/static/lib/jquery/dist/jquery.min.js"></script>
-    <script src="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/static/CoreNode/App/App.js" type="module"></script>
+  </body>
 </html>
