--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -13,77 +13,6 @@
     <script src="/static/CoreNode/App/App.js" type="module"></script>
 </head>
   <body>
-   <!--
-          <div class="col-md-6">
-            <div class="card mb-4 shadow-sm">
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="card mb-4 shadow-sm">
-              <div class="card-body">
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <div class="d-flex justify-content-between align-items-center">
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                  </div>
-                  <small class="text-muted">9 mins</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          -->
-  <!--<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/" data-nav data-link>Core Node</a>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" href="/UserModels" data-nav data-link>To User Page</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/Error/ErrorContentTest" data-nav data-link>To Error</a>
-        </li>
-    </div>
-  </nav>
-  <div class="jumbotron text-center">
-    <section class="jumbotron text-center">
-      <div class="container">
-        <h1>Album example</h1>
-        <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-        <p>
-          <a href="/UserModels" class="btn btn-primary my-2"data-nav data-link>To User Page</a>
-          <a href="/Error/ErrorContentTest" class="btn btn-secondary my-2" data-nav data-link>To Error</a>
-        </p>
-      </div>
-    </section>
-    <div class="album py-5 bg-light">
-      <div class="container">
-        <div class="row">
-         
-          <div class="col-md-12">
-            <main id="app"></main>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-right">
-        <a href="#">Back to top</a>
-      </p>
-      <p>Album example is © Bootstrap, but please download and customize it for yourself!</p>
-    </div>
-  </footer>-->
+    <rerwerwer><p>hiiiiiiiii</p></rerwerwer>
   </body>
 </html>
