Animation and layour optimization

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -12,6 +12,6 @@
     <script src="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/CoreNode/App/App.js" type="module"></script>
 </head>
-  <body>
+  <body class="hidden">
   </body>
 </html>
