Updated framework models

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,10 +8,11 @@
     <link rel='manifest' href='/manifest.json'>
     <link rel="stylesheet" href="/static/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/static/css/site.css" />
+    <link rel="stylesheet" href="/static/css/ChatStyle.css" />
     <script src="/static/lib/jquery/dist/jquery.min.js"></script>
     <script src="/static/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/CoreNode/App/App.js" type="module"></script>
 </head>
-  <body class="hidden">
+  <body>
   </body>
 </html>
